<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FlashFeed!</string>
    <string name="app_name">Snapperfiche</string>
    <string name="login_label_username">Username</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_login">Login</string>
    <string name="login_label_signup">Sign Up</string>
    <string name="statusfeed_name">StatusFeed</string>
    <string name="statusdetail_name">StatusDetail</string>
    <string name="registration_name">Registration</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sex">Sex</string>
    <string name="DOB">Date of Birth</string>
    <string name="photoconfirm_name">PhotoConfirm</string>
    <string name="friendtaggeractivity_name">FriendTagger</string>
    <string name="activity_profilefeed_name">Profile Feed</string>
    <string name="txt_top_nav_profile">Profile</string>
    <string name="txt_top_nav_question">Question</string>
    <string name="activity_name_question_landing">Question Landing</string>
    <string name="btn_status_feed_add_group">+</string>
    <string name="btn_add_group_confirm">Add</string>
    <string name="btn_ask_question">Ask</string>
    <string name="btn_snap">Snap</string>
    <string name="post_detail_add_comment">Feed it</string>
    <string name="photo_confirm_tags">Tags</string>
    <string name="error_req_fname">What is your first name?aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="error_last_name">What is your last name?</string>
    <string name="error_req_email">Please enter your favorite email.</string>
    <string name="error_req_pass">Please enter a password, make it long and hard to guess.</string>
    <string name="error_email_dup">Someone is using this email already.</string>
    <string name="error_pass_min_length">Aw your password is too short. (That\'s what she..)</string>
    <string name="error_email_format">Invalid email</string>
	<string name="mock">This is just a mock activity.</string>
	<string name="tab_1">Friends</string>
	<string name="tab_2">Groups</string>
	<string name="tab_3">Categories</string>
	<string name="my">My</string>
	<string name="friends">Friends</string>
	<string name="global">Global</string>
</resources>
