<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/app_name"
    />
    <EditText
    	android:hint="@string/login_label_username"
    	android:id="@+id/login_txtBox_username"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	/>
    <EditText
    	android:hint="@string/login_label_password"
    	android:id="@+id/login_txtBox_password"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"
    	/>	
    <Button
    	android:id="@+id/login_btn_login"
    	android:text="@string/login_label_login"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	/>
    <Button
    	android:id="@+id/login_btn_signup"
    	android:text="@string/login_label_signup"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	/>
    <ImageView
    	android:id="@+id/img_web"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	/>
</LinearLayout>
